@@ -1,3 +1,7 @@
+2009-09-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* gas/sh/basic.exp: Add -big to ASFLAGS for sh*l*-*-netbsdelf*.
+
 2009-09-08  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/d30v/serial2.l: Adjust position of page break.
