@@ -1,3 +1,7 @@
+2009-09-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* configure.tgt (sh*-*-netbsdelf*): Set endian according to cpu.
+
 2009-09-08  Alan Modra  <amodra@bigpond.net.au>
 
 	* read.c (emit_expr_fix): Handle size 3.
